<resources>
    <string name="app_name">Iterative Practice</string>
    <string name="login_button">Login</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="website_logo">website logo</string>
    <string name="login_fragment_label">login fragment</string>
    <string name="verification_fragment_label">verification fragment</string>
    <string name="verification_text">Verification page not implemented yet, oops..</string>
    <string name="menu_fragment_label">menu fragment</string>
    <string name="menu_item_label">menu item layout fragment</string>
    <string name="delete_button_text">Delete Item</string>
    <string name="FAB">floating action button</string>
    <string name="info">Info</string>
    <string name="info_fab_fragment_label">info FAB fragment</string>
    <string name="signup_button">Sign Up</string>
    <string name="email">Email</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password">Password</string>
    <string name="welcome_fragment_label">Welcome fragment</string>
    <string name="sign_up_bottom_sheet_dialog_label">bottom sheet signup fragment</string>
    <string name="place_order">Place Order</string>
    <string name="hotel">Hotel</string>
    <string name="work">Work</string>
    <string name="friend_s_house">Friend\'s house</string>
    <string name="home">Home</string>
    <string name="complete_order">Complete Order</string>
    <string name="confirm_address">Confirm address</string>
    <string name="address">Address:</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="go_to_products">Go to Products</string>
    <string name="go_to_menu">Go to Menu</string>
    <string name="cart_total">Cart total:</string>
    <string name="view_cart">View cart</string>
    <string name="menu_title">Restaurant Menu</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="checkout">Checkout</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="qty">Quantity:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="remove_item">Remove item</string>
    <string name="your_cart">Your Cart</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
</resources>